2002-01-20  Ryan Nunn  <triforce@merlin.net.au>
	* data/credits.txt : Added Mark Siewert to credits for Win32 Exult
	  studio.

2002-01-20  Ryan Nunn  <triforce@merlin.net.au>
	* Makefile.cygwin, Makefile.win32, exult.cc, mapedit/Makefile.mingw,
	  mapedit/chunklst.cc, mapedit/chunklst.*, mapedit/shapelst.*,
	  mapedit/studio.cc, msvcstuff/Exult.dsp, msvcstuff/msvc_kludges.h :
	  Drag and Drop in Windows.

2002-01-20  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/shapeedit.cc: Show shapes in 'Equipment' window, and
	also allow DND onto the shapes.

2002-01-19  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/shapeedit.cc:  Shape-info editing seems to (at least
	superficially) work.
	* shapes/shapeinf.h:  Init. ready_type to 255 in constructor.

2002-01-19  Patrick Burke  <takhisisii@yahoo.com.au>
	* conf/*: Optimised XMLEntity::searchpairs.
	* usecode/ucxt: Changed from using opcodes.txt to u7opcodes.data,
	which is opcodes.txt with conf/ based formatting.

2002-01-18  Ryan Nunn  <triforce@merlin.net.au>
	* actors.cc, conf/XMLEntity.cc, server/objserial.cc,
	  objs/egg.cc, exult.cc : MSVCisms

	* exult.cc : Xdrag code is not to be compile under Windows.

	* cheat.cc : system() doesn't behave in windows so I call CreateProcess
	  instead.

	* server/servermsg.cc : A little hack for Windows.

	* mapedit/studio.cc : Need to explicitly use ios::binary to open a file
	  as binary. The default is ASCII!

	* shapes/shapevga.cc : info_read was not initialzed

	* mapedit/studio_win32.* , exult_studio_win32.cc : No longer needed

	* msvcstuff/Exult.dsp, msvcstuff/msvc_kludges.h, Makefile.win32
	  Makefile.cygwin : Add server dir and compile with USE_EXULTSTUDIO

	* mapedit/Makefile.mingw, mapedit/chunklst.cc, mapedit/eggedit.cc,
	  mapedit/npcedit.cc, mapedit/objedit.cc, mapedit/shapeedit.cc,
	  mapedit/shapelst.cc, mapedit/studio.* : Getting Auto connect to work
	  in windows the 'proper' as far as I know. Exult_studio.exe will now